Change link to github html version

--- a/homework/unit_09/homework_submission.html
+++ b/homework/unit_09/homework_submission.html
@@ -268,6 +268,7 @@ names(castdf) &lt;- c(&quot;FirstName&quot;, &quot;SurName&quot;, &quot;Characte
 <ul>
 <li>Files for this homework (Unit 5) are in this folder: <strong>homework/unit_09</strong></li>
 <li><a href="https://github.com/allthebits/mjk-msds6306/blob/master/homework/unit_09/homework_submission.Rmd">RMD File</a></li>
+<li><a href="http://htmlpreview.github.io/?https://raw.githubusercontent.com/allthebits/mjk-msds6306/master/homework/unit_09/homework_submission.html">HTML Version of Assignment 9</a></li>
 </ul>
 </div>
 
